--- a/LunulaCSharp/Lunula/Lunula.csproj
+++ b/LunulaCSharp/Lunula/Lunula.csproj
@@ -58,9 +58,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Builtins.cs" />
+    <Compile Include="Closure.cs" />
+    <Compile Include="Cons.cs" />
+    <Compile Include="Continuation.cs" />
+    <Compile Include="Instruction.cs" />
     <Compile Include="Lunula.cs" />
+    <Compile Include="LunulaVM.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Template.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="..\..\src\lunula.lvm">
